<resources>
    <string name="app_name">GPApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="description_credentials">Select this button to set your Portico credentials.</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="description_bluetooth">These options allow you to connect to a C2X or Moby5500 device.</string>
    <string name="connect_to_device">Connect to C2X/C3X (Bluetooth)</string>
    <string name="connect_to_moby_device">Connect to Moby5500 (Bluetooth)</string>
    <string name="connect_to_usbmoby_device">Connect to Moby5500 (USB)</string>
    <string name="description_card">This option is for testing manual card entry and performing a simple CreditSale transaction with it.</string>
    <string name="card_entry">Manual Card Entry and Transaction</string>
    <string name="description_transactions">Test various transaction types using a connected device. Use one of the top buttons to connect to a device first.</string>
    <string name="c2x_transactions">Transactions</string>
    <string name="description_ota_update">Check for and update firmware and kernel for the C2X device (Moby5500 not yet supported).</string>
    <string name="ota_update">OTA Update</string>
    <string name="about">Provision Version</string>
    <string name="environment">Environment TEST/PROD</string>
    <string name="disconnect">Disconnect</string>
    <string name="saf_switch">SAF Toggle</string>
    <string name="surcharge_switch">Surcharge</string>
    <string name="surcharge_pretax_switch">Surcharge Pre-Tax</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">SUBMIT</string>
    <string name="card_no">Card Number</string>
    <string name="card_exp_date">Expiration Month</string>
    <string name="card_exp_yr">Expiration Year</string>
    <string name="card_cvv">CVV</string>

    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="email_receipt">Email Receipt</string>
    <string name="error_enter_valid_expiration">Make sure to enter a valid number for the expiration month and year.</string>
    <string name="error_enter_valid_card">Make sure to enter valid credit card information.</string>
    <string name="error_device_not_connected">You must connect to your device before using this transaction.</string>
    <string name="error_device_not_connected_ota">You must connect to your device before using OTA updates.</string>
    <string name="error_device_not_supported_rki">Current device does not support RKI.</string>
    <string name="error_no_transaction_id">You must have a valid transaction ID (from CreditSale) to perform this transaction.</string>
    <string name="error_no_amount">You must enter a valid Transaction Amount.</string>
    <string name="error_no_gratuity">You must enter a valid Gratuity Amount.</string>
    <string name="error_credentials_null">You need to enter in your credentials before connecting to a device.</string>
    <string name="error_token_and_id">If using a token, you must include both token and card brand transaction ID.</string>

    <string name="loading_msg">Please wait</string>
    <string name="tokenizing">Tokenizing&#8230;</string>

    <string name="location_permission_necessary">Location permission is required for bluetooth connections.</string>

    <string name="credentials">Credentials</string>
    <string name="public_key">Public Key:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="site_id">Site ID:</string>
    <string name="device_id">Device ID:</string>
    <string name="license_id">License ID:</string>
    <string name="save">Save</string>

    <string name="c2x_connection_label">Bluetooth Connection Status:</string>
    <string name="bluetooth_status_not_connected">Not Connected</string>
    <string name="bluetooth_scan">Scan</string>
    <string name="bluetooth_reconnect">Reconnect</string>
    <string name="usb_connect">USB Connect</string>
    <string name="bluetooth_improved_accuracy">Bluetooth - Improved Accuracy</string>
    <string name="bluetooth_accuracy_message">If you have trouble finding your C2X device when scanning, you might want to enable improved accuracy for bluetooth. This can be found in Settings->Location->Improve Accuracy->Bluetooth scanning.</string>

    <string name="transaction_error">Transaction Error</string>
    <string name="transaction_complete">Transaction Complete</string>
    <string name="saf_transactions_complete">SAF Transactions Complete</string>
    <string name="transaction_status_label">Transaction Status:</string>
    <string name="transaction_status_none">None</string>
    <string name="transaction_amount_label">Total Transaction Amount:</string>
    <string name="transaction_amount">Transaction amount (total including gratuity)</string>
    <string name="gratuity_amount">Gratuity amount</string>
    <string name="tax_amount">Tax amount</string>
    <string name="creditsale_manual">CreditSale - $10 - Manual Entry</string>
    <string name="transaction_list_title">Select a transaction type:</string>
    <string name="creditsale">CreditSale</string>
    <string name="tipadjust">Tip Adjust</string>
    <string name="creditreturn">Credit Return</string>
    <string name="creditvoid">Credit Void</string>
    <string name="creditadjust">Credit Adjust</string>
    <string name="creditauth">Credit Auth</string>
    <string name="creditcapture">Credit Capture</string>
    <string name="batchclose">Batch Close</string>
    <string name="giftcard">Gift Card</string>
    <string name="uploadsaf">Upload SAF</string>
    <string name="forcesaf_off">Force SAF: Off</string>
    <string name="forcesaf_on">Force SAF: On</string>

    <string name="checking">Checking</string>
    <string name="check_firmware">Check for firmware updates</string>
    <string name="check_kernel">Check for kernel updates</string>
    <string name="rki">Remote Key Injection</string>
    <string name="checking_firmware">Checking for available firmware updates</string>
    <string name="checking_kernel">Checking for available kernel updates</string>

    <string name="execute">Execute</string>
    <string name="allow_duplicates">Allow Duplicates</string>
    <string name="request_token">Request Token</string>
    <string name="client_transaction_id">Client Transaction ID:</string>
    <string name="invoice_number">Invoice Number:</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="optional_token">Optional (Required w/ Token)</string>
    <string name="transaction_id">Transaction ID:</string>
    <string name="token">Token:</string>
    <string name="card_brand_txn_id">Card Brand Txn ID: </string>
</resources>
