<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionListActivity">

    <TextView
        android:id="@+id/transaction_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_list_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/layout_margin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/transaction_list_title"
        android:layout_marginTop="@dimen/layout_margin">

        <Button
            android:id="@+id/creditsale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditsale" />

        <Button
            android:id="@+id/creditadjust_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditadjust" />

        <Button
            android:id="@+id/creditauth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditauth" />

        <Button
            android:id="@+id/creditcapture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditcapture" />

        <Button
            android:id="@+id/creditreturn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditreturn" />

        <Button
            android:id="@+id/creditvoid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/creditvoid" />

        <Button
            android:id="@+id/batchclose_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/batchclose" />

        <Button
            android:id="@+id/giftcard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/giftcard" />

    </LinearLayout>

</RelativeLayout>