<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BatchCloseActivity">

    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/transaction_status_label" />

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/transaction_status_none" />

    </LinearLayout>

    <TextView
        android:id="@+id/batchclose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batchclose"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/status_layout"
        android:layout_marginTop="@dimen/layout_margin"/>

    <Button
        android:id="@+id/execute_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/batchclose_title"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/execute" />

</RelativeLayout>